# workbench

./: .dockerignore  .env.example  .gitignore  .opencodeignore  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  META_PROMPT.md  README.md  alembic.ini  all_prompts_inventory.json  docker-compose.yml  pyproject.toml
PResearch/: .env.example  .gitignore  .opencodeignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
PResearch/src/presearch/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  prompts.py
PResearch/src/presearch/models/: __init__.py  mind_map.py  state.py  task_graph.py
PResearch/src/presearch/output/: __init__.py  console.py  markdown.py  protocol.py
PResearch/src/presearch/providers/: __init__.py  base.py  types.py
PResearch/src/presearch/providers/custom/: __init__.py  provider.py
PResearch/src/presearch/providers/openai/: __init__.py  chat.py  provider.py
PResearch/src/presearch/tools/: __init__.py  code_executor.py  registry.py  research_tools.py  subagent_tool.py  web_reader.py  web_search.py
PResearch/src/presearch/web/: __init__.py  app.py  db.py  interviewer.py  models.py  routes.py  session.py  webui.py  ws.py
PResearch/src/presearch/web/static/: index.html
PResearch/tests/: conftest.py
citizen/: .dockerignore  .env.example  .gitignore  .opencodeignore  AGENTS.md  DISCLAIMER_DE.md  DISCLAIMER_EN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
citizen/alembic/: env.py
citizen/alembic/versions/: 001_init_schema.py  002_add_cache_entry.py  003_add_conversations.py  004_add_legal_parameter.py  005_add_case_chat_fields.py
citizen/app/: __init__.py  main.py
citizen/app/api/routes/: __init__.py  analyze.py  cases.py  conversations.py  corpus.py  ingest.py  meta.py
citizen/app/core/: __init__.py  config.py  pipeline.py  router.py
citizen/app/db/: __init__.py  models.py  session.py
citizen/app/middleware/: __init__.py  disclaimer.py  rate_limit.py
citizen/app/services/: audit.py  cache.py  calculation.py  case_chat.py  chat_reasoning.py  conversation.py  corpus.py  ocr.py  parameter_store.py  reasoning.py  retrieval.py  rules_engine.py  verification.py
citizen/app/utils/: image.py  pdf.py  text.py  tokens.py
citizen/scripts/: benchmark_analyze.py
citizen/static/: app.js  index.html  style.css
citizen/tests/: conftest.py  generate_test_files.py
citizen/tests/integration/: test_api_routes.py  test_corpus.py  test_pipeline.py  test_retrieval.py
citizen/tests/unit/: __init__.py  test_calculation.py  test_chunker.py  test_config.py  test_corpus_endpoint.py  test_middleware.py  test_ocr.py  test_pdf.py  test_pipeline.py  test_reasoning.py  test_router.py  test_rules_engine.py  test_session.py  test_verification.py
citizen/tests/unit/alembic/: __init__.py  test_alembic_config.py
citizen/tests/unit/test_db/: __init__.py  test_models.py
stoa/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
stoa/config/: default.toml  example.toml
stoa/skills/builtin/: critique_agent.md  deliberation_director.md  research_operator.md  rhetoric_analyst.md  synthesis_agent.md  workspace_operator.md
stoa/skills/packs/: adversarial_review.toml  deep_research.toml  workspace_ops.toml
stoa/src/caw/: __init__.py  __version__.py  errors.py  models.py
stoa/src/caw/api/: __init__.py  app.py  deps.py  schemas.py  websocket.py
stoa/src/caw/api/routes/: __init__.py  approvals.py  chat.py  deliberation.py  evaluation.py  (+5 more)
stoa/src/caw/capabilities/: __init__.py
stoa/src/caw/cli/: __init__.py  main.py
stoa/src/caw/core/: __init__.py  approvals.py  config.py  engine.py  permissions.py  router.py  session.py
stoa/src/caw/evaluation/: __init__.py  comparator.py  regression.py  runner.py  scorer.py  tasks.py
stoa/src/caw/protocols/: __init__.py  anthropic_provider.py  mock.py  openai_provider.py  provider.py  registry.py  types.py
stoa/src/caw/skills/: __init__.py  loader.py  pack.py  registry.py  resolver.py  validator.py
stoa/src/caw/storage/: __init__.py  approvals.py  database.py  repository.py
stoa/src/caw/traces/: __init__.py  collector.py  replay.py  schemas.py
stoa/tests/: conftest.py
stoa/tests/fixtures/config/: invalid_missing_provider.toml  invalid_sandbox_mode.toml  valid_full.toml  valid_minimal.toml
stoa/tests/fixtures/research/: sample.md  sample.txt
stoa/tests/fixtures/skills/: invalid_bad_version.md  invalid_empty_body.md  invalid_missing_id.md  valid_basic.md  valid_full.md
stoa/tests/fixtures/tasks/: sample_task.toml
stoa/tests/integration/: conftest.py  test_approval_flow.py  test_deliberation_journey.py  test_engine_integration.py  test_evaluation_journey.py  test_research_journey.py  test_workspace_journey.py
stoa/tests/unit/: test_errors.py  test_models.py
stoa/tests/unit/api/: conftest.py  test_app.py  test_chat.py  test_deliberation.py  test_evaluation.py  test_research.py  test_sessions.py  test_skills.py  test_traces.py  test_websocket.py  test_workspace.py
stoa/tests/unit/cli/: test_main.py
stoa/tests/unit/core/: test_config.py  test_engine.py  test_permissions.py  test_router.py  test_session.py
stoa/tests/unit/evaluation/: test_comparator.py  test_regression.py  test_runner.py  test_scorer.py  test_tasks.py
stoa/tests/unit/protocols/: test_anthropic_provider.py  test_mock.py  test_openai_provider.py  test_registry.py  test_types.py
stoa/tests/unit/skills/: test_builtin_assets.py  test_loader.py  test_pack.py  test_registry.py  test_resolver.py  test_validator.py
stoa/tests/unit/storage/: test_database.py  test_repository.py
stoa/tests/unit/traces/: test_collector.py  test_replay.py  test_schemas.py
(+623 files in other folders)
