[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench"
version = "0.1.0"
description = "Unified BYOK AI Workbench — agent-driven infrastructure for LLM-powered tools"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0,<0.136.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "bcrypt>=4.0.0",
    "aiosmtplib>=5.0.0",
    "slowapi>=0.1.9",
    "openai>=1.50.0",
    "jinja2>=3.1.0",
    "chromadb>=0.6.0",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
news = [
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "apscheduler>=3.11",
    "python-dotenv>=1.0",
]
legal = [
    "pdfplumber>=0.11",
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "tiktoken>=0.7",
    "pgvector>=0.3",
]
research = [
    "rich>=13.0",
    "click>=8.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "trafilatura>=2.0",
]
planning = [
    "pandas>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
workbench = "workbench.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/workbench", "agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
