[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presearch"
version = "0.1.0"
description = "Autonomous deep research agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "trafilatura>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]
web = ["starlette>=0.41", "uvicorn[standard]>=0.32", "aiosqlite>=0.20"]

[project.scripts]
presearch = "presearch.cli:main"
presearch-web = "presearch.web.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/presearch"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
