[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citizen"
version = "0.1.0"
description = "Local-first, evidence-constrained legal reasoning engine for German social law"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "pgvector==0.3.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "httpx==0.27.2",
    "pdfplumber==0.11.4",
    "PyMuPDF==1.24.10",
    "pytesseract==0.3.13",
    "Pillow==10.4.0",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "tiktoken==0.7.0",
    "python-multipart==0.0.9",
    "jinja2==3.1.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "pytest-benchmark==4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
