[project]
name = "canonical-agent-workbench"
version = "0.1.0"
description = "A human-directed platform for high-fidelity compression, analysis, deliberation, and action across information and real workspaces."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "uuid6>=2024.1",
    "anthropic>=0.40",
    "httpx>=0.27",
    "openai>=1.50",
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "click>=8.0",
    "rich>=13.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "markdownify>=0.12",
]

[project.scripts]
caw = "caw.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["caw"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
